# self-agent

./: .gitignore  Cargo.toml  README.md  agent.toml  persona.md
cmd/upload-service/: README.md  server.py
src/: config.rs  dingtalk.rs  image_transport.rs  llm.rs  main.rs  memory.rs  react.rs  screenshot.rs  telegram.rs  tools.rs  upload.rs
